--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,24 +1,23 @@
 # Dockerfile
-FROM python:3.10-slim
+FROM --platform=linux/amd64 python:3.10-slim
 
-# Set working directory inside the container
+# Set working directory
 WORKDIR /app
 
-# Install system-level dependencies
+# Install system-level dependencies (if needed for PyMuPDF)
 RUN apt-get update && apt-get install -y \
     gcc \
     g++ \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements and install Python packages
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# Copy all code
+COPY . /app
 
-# Copy your main Python script
-COPY pdf_extractor.py .
+# Install Python packages
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Create input/output folders
 RUN mkdir -p /app/input /app/output
 
-# Define default run command
-CMD ["python", "pdf_extractor.py"]
+# Run the extractor
+CMD ["python", "run_extractor.py"]
