--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,4 +3,15 @@ unicodedata2==15.1.0
 Flask==2.3.3
 PyMuPDF==1.23.14
 Werkzeug==2.3.7
-unicodedata2==15.1.0
+scikit-learn
+nltk==3.8.1
+pytest==7.4.3
+pytest-cov==4.1.0
+
+Flask-CORS==4.0.0
+PyPDF2==3.0.1
+
+numpy==1.24.3
+
+python-dotenv==1.0.0
+gunicorn==21.2.0
