--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,26 +1,27 @@
-# Use a slim Python base image
 FROM python:3.10-slim
 
 # Set working directory
 WORKDIR /app
 
-# Install system dependencies required by PyMuPDF
+# Install system-level dependencies
 RUN apt-get update && apt-get install -y \
     gcc \
     g++ \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements.txt first to leverage Docker cache
+# Copy requirements and install Python packages
 COPY requirements.txt .
-
-# Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the actual Python script
-COPY pdf_extractor.py .
+# ✅ Download NLTK data after nltk is installed
+RUN python -m nltk.downloader punkt
 
-# Create input/output folders inside container
+# Copy your Python files
+COPY pdf_extractor.py .
+COPY test_validation.py .
+
+# Create input/output folders
 RUN mkdir -p /app/input /app/output
 
-# Set default command to run the extractor
+# Set default command
 CMD ["python", "pdf_extractor.py"]
